Closed Bug 1682692 Opened 3 years ago Closed 3 years ago

subtree order in slack's keyboard shortcuts pane is wrong

Categories

(Core :: Disability Access APIs, defect, P1)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- wontfix
firefox83 --- wontfix
firefox84 --- wontfix
firefox85 --- fixed
firefox86 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [mac2020_2])

Attachments

(1 file)

STR:

  1. Open a slack instance in Firefox
  2. Press ctrl+/ to open keyboard shortcuts pane.
  3. Go to list item containing string "Move focus through messages"

Result:
List item is named "Move focus through messages up arrow key down arrow key or"

Expected:
List item should be named "Move focus through messages up arrow or key down arrow key"

Looks like slack is doing a bunch of tree stylings and mutations that mess with our insertion processing code. The insertions queue for the listitem container contains both redundant nodes, and unparented nodes. Some combination of this is causing us to reinsert children in the wrong order.

Whiteboard: [mac2020_2]
Severity: -- → S2
Priority: -- → P1
Attachment #9193386 - Attachment description: Bug 1682692 - (re)insert child after previous sibling, not previously inserted child. r?Jamie! → Bug 1682692 - (re)insert child after previous sibling, not previous insertion candidate. r?Jamie!
Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4d61fef74272
(re)insert child after previous sibling, not previous insertion candidate. r=Jamie
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Blocks: 1681072
Has STR: --- → yes
Flags: in-testsuite+
Regressed by: 686400
Has Regression Range: --- → yes

Comment on attachment 9193386 [details]
Bug 1682692 - (re)insert child after previous sibling, not previous insertion candidate. r?Jamie!

Beta/Release Uplift Approval Request

  • User impact if declined: Hangs when opening the keyboard shortcuts lists in the Slack Help menu, other weird element order errors under certain circumstances.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: Bug 1681072
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Corrects tree ordering in specific circumstances and is well tested.
  • String changes made/needed: None.
Attachment #9193386 - Flags: approval-mozilla-beta?
Regressions: 1683330

Comment on attachment 9193386 [details]
Bug 1682692 - (re)insert child after previous sibling, not previous insertion candidate. r?Jamie!

Approved for 85.0b4.

Attachment #9193386 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: