Bug 1682692 - (re)insert child after previous sibling, not previous insertion candidate. r=Jamie, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D99849